<resources>
    <string name="app_name">NFCReader</string>
    <string name="not_has_nfc_hardware">Устройство не оборудовано NFC</string>
    <string name="enable_android_nfc">Устройство поддерживает NFC</string>
    <string name="un_enable_nfc">Режим NFC не подключен</string>
    <string name="need_enable_android_beam">Подключите Android Beam</string>
    <string name="name_app">NFCReader</string>
    <string name="tap_to_accept_another_user_s_data">Tap to accept another user\'s data</string>
    <string name="tap_to_share_your_data_with_another_user">Tap to share your data with another user</string>
    <string name="send">Send</string>
    <string name="accept">Accept</string>
    <string name="todo">TODO</string>
    <string name="received_data">Received data</string>
</resources>